--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,22 @@
+decorator==4.1.2
+dj-database-url==0.4.2
+dj-static==0.0.6
 Django==1.11.5
+django-toolbelt==0.0.1
+gunicorn==19.7.1
+ipython==6.2.0
+ipython-genutils==0.2.0
+jedi==0.10.2
+pexpect==4.2.1
+pickleshare==0.7.4
+prompt-toolkit==1.0.15
+psycopg2==2.7.3.1
+ptyprocess==0.5.2
+Pygments==2.2.0
 pytz==2017.2
-# django-pylibmc
-django-toolbelt
-psycopg2
-# pylibmc
-whitenoise
+simplegeneric==0.8.1
+six==1.11.0
+static3==0.7.0
+traitlets==4.3.2
+wcwidth==0.1.7
+whitenoise==3.3.0
